--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graph-tools": "^0.1.2",
     "graphql": "^16.0.1",
     "graphql-tools": "^8.2.0",
-    "mongo": "^0.1.0",
-    "nodemon": "^2.0.15"
+    "mongo": "^0.1.0"
   },
   "devDependencies": {
     "standard": "^16.0.4"
